--- a/fullrailway/README
+++ b/fullrailway/README
@@ -17,7 +17,7 @@ the arangodb3-client package follow https://www.arangodb.com/download-major/ubun
 
 2) Use the 'railway.json' file generated using the data query in osmrailway (https://github.com/anisotropi4/osmrailway)
 
-3) Create the 'output.json' report by importing and extracting data from the 'railway.json' into the visualisation directory
+3) Create the 'raildata.json' report by importing and extracting data from the 'railway.json' into the visualisation directory
 $ sh ./create.sh
 
-The 'output.json' file can be viewed using an d3 and OpenStreetMap Leaflet javascript framework described in the visualisation sub-directory
+The 'raildata.json' file can be viewed using an d3 and OpenStreetMap Leaflet javascript framework described in the visualisation sub-directory
